# ysu

./: .gitignore  README.md  build.sh  index.html  package.json  tsconfig.json
docs/: ENGINE_INTEGRATION.md
docs/architecture/: CURRENT_PROBLEM_ANALYSIS.md  ENGINE_MODULE_INDEX.md  INVESTIGATION_PLAN.md  REPO_SEPARATION_ANALYSIS.md  STATE_MANAGEMENT_ARCHITECTURE.md  TASK_5_MODERNIZATION_EVALUATION.md
docs/archive/: AI_DROP_IMPROVEMENTS.md  BIT_SCANNING_OPTIMIZATION_DESIGN.md  BIT_SCANNING_OPTIMIZATION_TASKS.md  EVALUATION_CACHE_WASM.md  IMPLEMENTATION_COMPLETE.md  MOVE_ORDERING_WASM.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_3_MEDIUM_LOW_PRIORITY_COMPLETION_SUMMARY.md  README_WASM_IMPLEMENTATION.md  TASK_3_5_COMPLETION_SUMMARY.md  WASM_COMPATIBILITY_GUIDE.md  WEBASSEMBLY_BITBOARDS_IMPLEMENTATION.md  WEBASSEMBLY_INTEGRATION_GUIDE.md
scripts/: aggregate_benchmark_results.sh  ci_performance_check.sh  convert_opening_book.py  copy-engine-files.sh  copy-ui-files.sh  export_telemetry.sh  flag_large_modules.sh  generate-fens.js  generate_opening_book.py  populate_opening_book.py  run_nmp_benchmarks.sh  run_performance_baseline.sh  run_regression_suite.sh  run_rust_coverage.sh  run_ts_coverage.sh  run_with_instruments.sh  run_with_perf.sh  test_migration.py  test_opening_book.py  update-version.sh
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  engine_manager.rs  engine_storage.rs  engine_validator.rs  engine_vs_engine.rs  lib.rs  state.rs
(+249 files in other folders)
